--- a/アウトプット課題/Practice01_2/Practice01_2.html
+++ b/アウトプット課題/Practice01_2/Practice01_2.html
@@ -9,7 +9,7 @@
     <title>Hello World!</title>
 </head>
 <body>
-    <img src="..\Practice01_2.png">
+    <img src=".\Practice01_2.png">
     <p>This is my first HTML.</p>
 
     <button id="btn">CLICK</button>
