--- a/アウトプット課題/Practice01_4/Practice01_4.html
+++ b/アウトプット課題/Practice01_4/Practice01_4.html
@@ -24,6 +24,6 @@
     <button class="start-btn" onclick="startSlot()">Start</button>
 </div>
 
-<script src="script.js"></script>
+<script src="Practice01_4.js"></script>
 </body>
 </html>
