--- a/アウトプット課題/Practice01_4/Practice01_4.html
+++ b/アウトプット課題/Practice01_4/Practice01_4.html
@@ -17,7 +17,7 @@
         <div class="w33"><button onclick="stop(2)">stop</button></div>
         <div class="w100"><button onclick="start()">start</button></div>
       </div>
-      <div id="char"></div>
+      <div id="char" class="w100"></div>
 
 <script src="Practice01_4.js"></script>
 </body>
